syntax = "proto3";
package grpc;

import "google/protobuf/empty.proto"; 

option go_package="notf-service/internal/web/conrpc";

// GetCardsMap messages
message SendFlaggedNotificationReq {
    string userID = 1;
    string content = 2;
    string severity = 3;
}

service NotfService {    
    // SendFlaggedNotification sends data to notification service to push notifications to users
    rpc SendFlaggedNotification (SendFlaggedNotificationReq) returns (google.protobuf.Empty);
}
